set(TARGET kv)
add_executable(${TARGET} kv-cache.cpp slminfer.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(kv PUBLIC .)
target_include_directories(kv PUBLIC ../..)
target_include_directories(kv PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_11)
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

set(TARGET kv-test)
add_executable(${TARGET} kv-state.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_11)
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
